Refactoring
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@gmail.com>